# wultiplexor

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  diagram.excalidraw  pyproject.toml  pytest.ini  whannel.py  wultiplexor.py
src/wultiplexor/: __init__.py  version.py  whannel.py  wultiplexor.py
tests/whannel/: test_control_connection.py
