[project]
name = "wultiplexor"
version = "0.0.5"
description = "This tool is for forwarding TCP or SOCK connections from one computer to another using a central web socket server."
keywords = [
    "proxy", "gate", "gateway", "websocket", "network", "networking", "websockets", "tcp", "socks",
    "forward", "forwarding", "tunnel", "tunneling", "tunnelling", "multiplex", "multiplexing", "multiplexer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [{ name = "Vd", email = "wultiplexor@vd2.org" }, ]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "websockets~=12.0",
]

[project.urls]
homepage = "https://github.com/vd2org/wultiplexor"
repository = "https://github.com/vd2org/wultiplexor.git"
issues = "https://github.com/vd2org/wultiplexor/issues"


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
    "requests>=2.31.0",
]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
wultiplexor = "wultiplexor.wultiplexor:main"
whannel = "wultiplexor.whannel:main"

